[gd_scene load_steps=24 format=3 uid="uid://c3cxy7eoelfa1"]

[ext_resource type="PackedScene" uid="uid://bivcw0oqut6fv" path="res://players/player1.tscn" id="1_bl13t"]
[ext_resource type="Script" uid="uid://b5ky0d1ecyck8" path="res://scenes/test.gd" id="1_iyx0m"]
[ext_resource type="PackedScene" uid="uid://houbmpknqfm4" path="res://players/player2.tscn" id="2_iyx0m"]
[ext_resource type="TileSet" uid="uid://dtkpj3cwv2y8e" path="res://sprites/tiles.tres" id="3_iyx0m"]
[ext_resource type="Texture2D" uid="uid://c7je1j8wq8ini" path="res://sprites/background.png" id="5_j5jx5"]
[ext_resource type="Texture2D" uid="uid://b5vl738fhsfki" path="res://sprites/level_end.png" id="5_uacia"]
[ext_resource type="Texture2D" uid="uid://dw5gh3w0itawf" path="res://sprites/barrier_light.png" id="6_at5dv"]
[ext_resource type="Texture2D" uid="uid://ktgayls617sw" path="res://sprites/barrier_dark.png" id="7_jcd4p"]
[ext_resource type="Texture2D" uid="uid://cynxjnay0fin3" path="res://sprites/Dark_button.png" id="8_ajshl"]
[ext_resource type="Texture2D" uid="uid://dsisbc1s3pep7" path="res://sprites/portal.png" id="8_jcd4p"]
[ext_resource type="Texture2D" uid="uid://cw5n2arthkkhl" path="res://sprites/Light_button.png" id="9_ghpyy"]
[ext_resource type="Texture2D" uid="uid://bom012spngip4" path="res://sprites/OneWay.png" id="12_ghpyy"]
[ext_resource type="Texture2D" uid="uid://dpei6io5lkloi" path="res://sprites/key.png" id="13_44saj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iyx0m"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ajshl"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lpvoh"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5jx5"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_422h2"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fngl8"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkkp2"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6x3xw"]
size = Vector2(11, 11)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_44saj"]
bounce = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mbro"]
size = Vector2(10, 4)

[node name="test" type="Node"]
script = ExtResource("1_iyx0m")

[node name="player1" parent="." instance=ExtResource("1_bl13t")]
position = Vector2(245, 276)

[node name="player2" parent="." instance=ExtResource("2_iyx0m")]
position = Vector2(395, 276)
motion_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 180)
zoom = Vector2(3, 3)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("3_iyx0m")

[node name="End1" type="Area2D" parent="."]
position = Vector2(305, 95)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="End1"]
texture = ExtResource("5_uacia")

[node name="CollisionShape2D" type="CollisionShape2D" parent="End1"]
shape = SubResource("RectangleShape2D_iyx0m")

[node name="End2" type="Area2D" parent="."]
position = Vector2(335, 95)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="End2"]
texture = ExtResource("5_uacia")

[node name="CollisionShape2D" type="CollisionShape2D" parent="End2"]
shape = SubResource("RectangleShape2D_iyx0m")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(323, 186)
texture = ExtResource("5_j5jx5")

[node name="LevelComponents" type="Node" parent="."]

[node name="Portal" type="Area2D" parent="LevelComponents"]
position = Vector2(40, 57)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="LevelComponents/Portal"]
texture = ExtResource("8_jcd4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelComponents/Portal"]
shape = SubResource("RectangleShape2D_ajshl")

[node name="BarrierButtonDark" type="Area2D" parent="LevelComponents"]
position = Vector2(7, 13)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="LevelComponents/BarrierButtonDark"]
texture = ExtResource("8_ajshl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelComponents/BarrierButtonDark"]
shape = SubResource("RectangleShape2D_lpvoh")

[node name="BarrierButtonLight" type="Area2D" parent="LevelComponents"]
position = Vector2(36, 22)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="LevelComponents/BarrierButtonLight"]
texture = ExtResource("9_ghpyy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelComponents/BarrierButtonLight"]
shape = SubResource("RectangleShape2D_j5jx5")

[node name="DarkBarriers" type="Node" parent="LevelComponents"]

[node name="BarrierDark" type="StaticBody2D" parent="LevelComponents/DarkBarriers"]
position = Vector2(38, -18)
collision_layer = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="LevelComponents/DarkBarriers/BarrierDark"]
texture = ExtResource("7_jcd4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelComponents/DarkBarriers/BarrierDark"]
shape = SubResource("RectangleShape2D_422h2")

[node name="LightBarriers" type="Node" parent="LevelComponents"]

[node name="BarrierLight" type="StaticBody2D" parent="LevelComponents/LightBarriers"]
position = Vector2(21, -27)
collision_layer = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="LevelComponents/LightBarriers/BarrierLight"]
texture = ExtResource("6_at5dv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelComponents/LightBarriers/BarrierLight"]
shape = SubResource("RectangleShape2D_fngl8")

[node name="Locks" type="Node" parent="LevelComponents"]

[node name="LockedDoor" type="StaticBody2D" parent="LevelComponents/Locks"]
position = Vector2(-43, 8)
collision_layer = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="LevelComponents/Locks/LockedDoor"]
texture = ExtResource("12_ghpyy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelComponents/Locks/LockedDoor"]
shape = SubResource("RectangleShape2D_rkkp2")

[node name="Area2D" type="Area2D" parent="LevelComponents/Locks/LockedDoor"]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelComponents/Locks/LockedDoor/Area2D"]
shape = SubResource("RectangleShape2D_6x3xw")

[node name="RigidBody2D" type="RigidBody2D" parent="LevelComponents/Locks"]
position = Vector2(-29, -44)
collision_layer = 2
collision_mask = 3
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_44saj")
gravity_scale = 0.0

[node name="Sprite2D" type="Sprite2D" parent="LevelComponents/Locks/RigidBody2D"]
texture = ExtResource("13_44saj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelComponents/Locks/RigidBody2D"]
shape = SubResource("RectangleShape2D_7mbro")

[node name="Area2D" type="Area2D" parent="LevelComponents/Locks/RigidBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelComponents/Locks/RigidBody2D/Area2D"]
shape = SubResource("RectangleShape2D_7mbro")

[connection signal="area_entered" from="End1" to="." method="_on_end_1_area_entered"]
[connection signal="area_exited" from="End1" to="." method="_on_end_1_area_exited"]
[connection signal="area_entered" from="End2" to="." method="_on_end_2_area_entered"]
[connection signal="area_exited" from="End2" to="." method="_on_end_2_area_exited"]
[connection signal="area_entered" from="LevelComponents/Portal" to="." method="_on_portal_area_entered"]
[connection signal="area_entered" from="LevelComponents/BarrierButtonDark" to="." method="_on_barrier_button_dark_area_entered"]
[connection signal="area_entered" from="LevelComponents/BarrierButtonLight" to="." method="_on_barrier_button_light_area_entered"]
[connection signal="area_entered" from="LevelComponents/Locks/LockedDoor/Area2D" to="." method="_on_area_2d_area_entered"]
